Remove mat tab content under header issue on mobile

--- a/src/docs/pages/component-docs/shared/scaffold/scaffold.component.scss
+++ b/src/docs/pages/component-docs/shared/scaffold/scaffold.component.scss
@@ -1,3 +1,7 @@
+/* Mobile Styles */
+.sm .tabs-container .mat-tab-header {
+    top: 56px!important;
+}
 .scaffold-container {
     display: flex;
     flex-direction: column;
@@ -111,6 +115,7 @@
                 margin-bottom: 24px;
             }
             table {
+                margin-bottom: 16px;
                 width: 100%;
                 border-collapse: collapse;
                 border-radius: 4px;
